# routes/authRoutes.js
@@ -2,16 +2,16 @@ const express = require('express');
 const passport = require('passport');
 const router = express.Router();
 
-// Start Google login
-router.get('/google', passport.authenticate('google', { scope: ['profile', 'email'] }));
+// Start GitHub login
+router.get('/github', passport.authenticate('github', { scope: ['user:email'] }));
 
-// Google callback route
+// GitHub callback route
 router.get(
-  '/google/callback',
-  passport.authenticate('google', { failureRedirect: '/' }),
+  '/github/callback',
+  passport.authenticate('github', { failureRedirect: '/' }),
   (req, res) => {
     // Redirect to a frontend page or dashboard
-    res.redirect('https://crud-api-oauthja.onrender.com/api-docs')
+    res.redirect('/api-docs') // https://crud-api-oauthja.onrender.com/api-docs
 
   }
 );
@@ -21,6 +21,7 @@ router.get('/logout', (req, res) => {
   req.logout(err => {
     if (err) return next(err);
     res.json({ message: 'Logged out' });
+    res.redirect('/');
   });
 });
 
